--- a/25-skate-card/css/style.css
+++ b/25-skate-card/css/style.css
@@ -31,7 +31,98 @@ body .container .card {
   transform-style: preserve-3d;
   cursor: pointer;
   transform: translateZ(-150px);
+  transition: all 350ms cubic-bezier(0.39, 0.575, 0.565, 1);
+}
+body .container .card > div {
+  position: absolute;
+  width: 320px;
+  height: 450px;
+  padding: 34px 21px;
+  transition: all 350ms cubic-bezier(0.39, 0.575, 0.565, 1);
+}
+body .container .card .front {
+  background-image: linear-gradient(180deg, rgb(17, 17, 17) 0%, rgba(92, 91, 94, 0) 100%);
+  transform: rotateY(0deg) translateZ(160px);
+  border-radius: 20px 0 50px;
+}
+body .container .card .front .price {
+  position: absolute;
+  bottom: 34px;
+  left: 21px;
+  font-size: 35px;
+  opacity: 0.5;
+}
+body .container .card .rigth {
+  opacity: 0.2;
+  transform: rotateY(90deg) translateZ(160px);
+  border-radius: 0 40px 0 40px;
+  background-image: linear-gradient(180deg, rgb(17, 17, 17) 0%, rgba(92, 91, 94, 0) 100%);
+}
+body .container .card .rigth ul {
+  list-style: none;
+  margin-left: 21px;
+  padding: 0;
+  font-size: 16px;
+  font-weight: 300;
+}
+body .container .card .rigth ul li {
+  padding-bottom: 8px;
+  position: rel;
+}
+body .container .card .rigth button {
+  position: absolute;
+  right: 21px;
+  bottom: 34px;
+  border: none;
+  box-shadow: none;
+  color: black;
+  background-color: white;
+  font-weight: 600;
+  padding: 5px 10px;
+  border-radius: 6px;
+  letter-spacing: 1px;
+  font-size: 16px;
 }
 body .container .card:hover {
   transform: translateZ(-160px) rotateY(-90deg);
+}
+body .container .card:hover .front {
+  opacity: 0;
+}
+body .container .card:hover .rigth {
+  opacity: 1;
+}
+body .container .card:hover ~ .img-container img {
+  transform: scale(0.9) translateX(77%) translateY(100%) rotateZ(80deg);
+}
+body .container .img-container {
+  animation: float 4s cubic-bezier(0.39, 0.575, 0.564, 1) infinite alternate;
+  position: absolute;
+  right: 0;
+  top: 0;
+  pointer-events: none;
+  transform: rotate(80deg);
+  backface-visibility: hidden;
+}
+body .container .img-container img {
+  transform-origin: top right;
+  transition: all 350ms cubic-bezier(0.39, 0.575, 0.565, 1);
+  transition-delay: 100ms;
+  transform: translateX(42%) rotateZ(13deg) skewX(3deg);
+  pointer-events: none;
+  width: 100%;
+}
+
+@keyframes float {
+  0% {
+    transform: translateZ(20px);
+  }
+  100% {
+    transform: translateY(-21px) translateX(-13px) translateZ(30px);
+  }
+}
+@media only screen and (max-width: 600px) {
+  body {
+    transform: scale(0.67);
+  }
 }/*# sourceMappingURL=style.css.map */
